# monorepo

./: .bazelignore  .bazelrc  .bazelversion  .gitignore  .pnpmfile.cjs  .swcrc  BUILD  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  auto.bazelrc.template  buildbuddy.yaml  deps.bzl  deps.bzl.old  disabled.builbuddy.yaml  file.txt  gazelle_python.yaml  gg.info  go.mod  go.sum  isi.txt  mypy.ignore  new_file.txt  package.json  pepino.txt  pnpm-lock.yaml  pyrightconfig.json  requirements.txt  requirements_lock.txt  tsconfig.json
bazel/: docker.bzl  files.bzl  python.bzl  toolkit.bzl
bazel/gazelle/tests/: BUILD.bazel
bazel/gazelle/tests/component_and_test_same_dir/pkg/: component.spec.ts  component.ts
bazel/gazelle/tests/component_and_test_same_dir_abs/: package.json
bazel/gazelle/tests/component_and_test_same_dir_abs/pkg/: BUILD.out  component.spec.ts
bazel/gazelle/tests/dom_component_test/pkg/: BUILD.out
bazel/gazelle/tests/import_comments/pkg/: BUILD.out  file.tsx
bazel/gazelle/tests/jest_test/: BUILD.in  BUILD.out  utils.spec.js
bazel/gazelle/tests/js_test/app/: BUILD.in  BUILD.out  main.js
bazel/gazelle/tests/js_test/lib/: BUILD.in  BUILD.out
bazel/gazelle/tests/mixed_test/: BUILD.out  helper.js
bazel/gazelle/tests/mixed_test/mixed/: BUILD.out  main.ts
bazel/gazelle/tests/node_builtin_test/: BUILD.out  file.ts  package.json
bazel/gazelle/tests/node_builtin_test/builtin/: BUILD.out
bazel/gazelle/tests/playwright_test/: BUILD.in  BUILD.out  package.json
bazel/gazelle/tests/playwright_test/e2e/: BUILD.out  example.pw.spec.js  example.pw.spec.ts
bazel/gazelle/tests/react_app_test/app/: App.tsx  BUILD.out
bazel/gazelle/tests/scoped_package_test/: BUILD.in  BUILD.out  package.json  test.ts
bazel/gazelle/tests/scoped_package_test/scoped/: BUILD.out  scoped.ts
bazel/gazelle/tests/ts_binary_test/: package.json
bazel/gazelle/tests/ts_binary_test/cmd/: BUILD.in  BUILD.out  main.ts  other.ts
bazel/gazelle/tests/ts_binary_test/lib/: BUILD.out  utils.ts
bazel/gazelle/tests/ts_binary_test/react/: BUILD.out  main.tsx
bazel/gazelle/tests/ts_css_test/app/: BUILD.out  app.css  main.ts
bazel/gazelle/tests/ts_css_test/lib/: BUILD.out  component.ts  styles.css
bazel/gazelle/tests/ts_library_remove_deps_test/lib/: BUILD.in  BUILD.out
bazel/gazelle/tests/ts_library_test/lib/: BUILD.out  second.tsx
bazel/gazelle/tests/ts_library_test/other/: BUILD.out  other.ts
bazel/gazelle/tests/ts_library_with_pnpm/: BUILD.in  package.json
bazel/gazelle/tests/ts_library_with_pnpm/lib/: BUILD.out
bazel/gazelle/tests/ts_library_with_pnpm/other/: BUILD.out  other.ts
bazel/gazelle/tests/vitest/tests/: BUILD.out  component.spec.ts  utils.test.ts
bazel/gazelle/tests/vitest/tests/lib/: BUILD.out  component.ts  utils.ts
bazel/gazelle/tests/vitest/tests/lib/nested/: BUILD.out  nested.ts
bazel/js/node/: BUILD.bazel  js_binary_init.cjs  launcher.mjs  loader.mjs
bazel/js/vitest/: BUILD.bazel  vitest.bzl  vitest.component.config.js  vitest.config.js  vitest.setup.js
bazel/oci/loader/: BUILD.bazel  builder.go  docker.go  main.go
ci/: Dockerfile
engprod/docker/: BUILD.bazel  postgres_image_test.py  postgres_service.py
engprod/testfs/: BUILD.bazel  testfs.go  testfs_test.go
examples/cc/: BUILD.bazel  cc_version.cc
examples/cc/direxists/: main.cc
examples/cc/git/: BUILD.bazel  main.cc
examples/go/: BUILD  BUILD.bazel
examples/go/cli_example/: BUILD.bazel  main.go
examples/go/helloworld/: BUILD.bazel  helloworld.go
examples/go/spinner/: BUILD.bazel  main.go
examples/grpc/client/: BUILD.bazel  greeter_client.py  greeter_client_integration_test.py  greeter_client_main.py
examples/grpc/server/: BUILD  BUILD.bazel  greeter_server.py
examples/js/js_deps/: BUILD.bazel  main.mjs  main2.cjs
examples/js/js_deps/formatter/: BUILD.bazel  formatter.mjs
examples/playwright/: BUILD.bazel  README.md  example.spec.ts
examples/playwright/component/: App.spec.tsx  App.tsx  BUILD.bazel
examples/playwright/component/playwright/: BUILD.bazel  index.html
examples/playwright/e2e/: BUILD.bazel
examples/playwright/ts_project_sources/: BUILD.bazel  README.md  playwright.config.js
examples/playwright/ts_sources/: BUILD.bazel  README.md  playwright.config.js
examples/python/: BUILD.bazel  github_example.py  test_pytest.py  tree.py  version.py
examples/react/: App.test.tsx  App.tsx  BUILD.bazel  index.tsx  jest.config.js  package.json  tsconfig.json
examples/sdl/: BUILD.bazel  main.go
examples/webapp/: BUILD.bazel  index.html  vite.config.js
examples/webapp/basic/: BUILD.bazel  index.html
examples/webapp/basic/style/: background.css  style.css
examples/webapp/style/: background.css  style.css
examples/webapp/tictactoe/: BUILD.bazel  index.html
examples/webapp/tictactoe/src/: App.tsx  BUILD.bazel  index.css  main.tsx
examples/webapp/ts/: BUILD.bazel  index.html
examples/webapp/ts/src/: BUILD.bazel  app.ts  main.ts
examples/webapp/tsx/: App.tsx  BUILD.bazel  index.css  index.html
examples/webapp/tsx/src/: App.tsx  BUILD.bazel  main.tsx
external_patches/: BUILD.bazel
genai/sd/: BUILD.bazel  main.py
gg/: BUILD  gg.py  gg_cli.py  gg_example.py  gg_test.py
git/: BUILD.bazel  git.go  git_test.go
github/: BUILD.bazel  github.go
salsa/gg/: BUILD.bazel  README.md  cli_server.py  gg.py  gg_cli.py  gg_example.py  gg_test.py
salsa/gg/ggo/: BUILD.bazel  main.go
salsa/gg/ggo/commands/: BUILD.bazel  clone.go  root.go
salsa/gg/ggo/ggo/: BUILD.bazel  ggo.go  ggo_test.go
salsa/gg/scripts/: build_and_deploy.sh
salsa/gg/server/protos/: BUILD.bazel  gg_service.proto
salsa/os/: BUILD.bazel  environ_ctx.py  environ_ctx_test.py
salsa/util/: BUILD.bazel  subsets.py  subsets_test.py
taco/: BUILD.bazel  engine.go  game.go  main.go
taco/components/: BUILD.bazel  base.go  fpscounter.go  input.go  position.go  rect.go  text.go
taco/core/: BUILD.bazel  core.go  timer.go
taco/game/: BUILD.bazel  main.go
terrabot/: README.md
tools/: BUILD.bazel  go-get.sh  gopackagesdriver.sh
workspace/: mypy.ini  (+1 more)
(+146 files in other folders)
