load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "git_lib",
    srcs = ["git.go"],
    importpath = "git",
    visibility = ["//visibility:private"],
    deps = ["@com_github_libgit2_git2go_v34//:git2go"],
)

go_binary(
    name = "git",
    embed = [":git_lib"],
    visibility = ["//visibility:public"],
)
