load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "git_lib",
    srcs = ["git.go"],
    importpath = "github.com/juanique/monorepo/git",
)

go_test(
    name = "git_test",
    srcs = ["git_test.go"],
    deps = [
        ":git_lib",
        "//engprod/testfs",
        "//salsa/go/must",
    ],
)
