load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "github",
    srcs = ["github.go"],
    importpath = "github.com/juanique/monorepo/github",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_go_github_v38//github",
        "@org_golang_x_oauth2//:oauth2",
    ],
)
