load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "github",
    srcs = ["github.go"],
    importpath = "github.com/juanique/monorepo/github",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_go_github_v38//github:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
    ],
)
