load("//:bazel/python.bzl", "py_library", "py_test")
load("//bazel/oci:defs.bzl", "image")

image(
    name = "postgres_image",
    base = "@postgres",
    env = {
        "POSTGRES_USER": "postgres",
        "POSTGRES_PASSWORD": "postgres",
        "POSTGRES_DB": "postgres",
    },
)

py_library(
    name = "postgres_service",
    srcs = ["postgres_service.py"],
    data = [
        ":postgres_image.loader",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "//salsa/docker/testing:docker_service",
        "@pip_deps//docker",
        "@pip_deps//psycopg2_binary",
    ],
)

py_test(
    name = "postgres_image_test",
    srcs = ["postgres_image_test.py"],
    firecracker = True,
    deps = [
        ":postgres_service",
        "@pip_deps//docker",
    ],
)
