load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "testfs",
    srcs = ["testfs.go"],
    importpath = "github.com/juanique/monorepo/engprod/testfs",
    visibility = ["//visibility:public"],
    deps = ["//salsa/go/must"],
)

go_test(
    name = "testfs_test",
    srcs = ["testfs_test.go"],
    deps = [
        ":testfs",
        "@com_github_stretchr_testify//suite",
    ],
)
