load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@tar.bzl//:tar.bzl", "mutate", "tar")


go_library(
    name = "helloworld_lib",
    srcs = ["helloworld.go"],
    importpath = "example/helloworld",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "go",
    embed = [":go_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_lib",
    srcs = ["helloworld.go"],
    importpath = "github.com/juanique/monorepo/examples/go",
    visibility = ["//visibility:private"],
)

tar(
    name = "pkg",
    srcs = [":go"],
    mutate = mutate(
        package_dir = "usr/bin",
    )
)
