load("//bazel/playwright:defs.bzl", "playwright_test")

# TODO: Add playwright support to gazelle
# gazelle:exclude ./

playwright_test(
    name = "test",
    srcs = ["example.spec.ts"],
    tags = ["manual"], # sends network requests, cant run on CI
    deps = [
        "//salsa/testing/playwright",
    ],
)
