load("@pip_deps//:requirements.bzl", "requirement")
load("//:bazel/python.bzl", "pytest_test")

py_binary(
    name = "version",
    srcs = ["version.py"],
)

py_binary(
    name = "tree",
    srcs = ["tree.py"],
    deps = [
        requirement("rich"),
    ],
)

py_binary(
    name = "github_example",
    srcs = ["github_example.py"],
    deps = [
        requirement("PyGithub"),
    ],
)

pytest_test(
    name = "test_pytest",
    srcs = ["test_pytest.py"],
)
