load("@aspect_rules_esbuild//esbuild:defs.bzl", "esbuild")
load("@aspect_rules_jest//jest:defs.bzl", "jest_test")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_swc//swc:defs.bzl", swc = "swc_transpiler")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

esbuild(
    name = "app_bundle",
    define = {"process.env.NODE_ENV": '"production"'},
    entry_points = ["index.tsx"],
    metafile = False,
    minify = True,
    deps = [":app"],
)

ts_project(
    name = "app",
    srcs = [
        "App.tsx",
        "index.tsx",
    ],
    declaration = True,
    transpiler = swc,
    deps = [
        ":node_modules/@types/react",
        ":node_modules/@types/react-dom",
    ],
)

jest_test(
    name = "app_test",
    config = "jest.config.js",
    data = [
        "App.test.tsx",
        "App.tsx",
        "setupTests.ts",
        ":node_modules/@testing-library/jest-dom",
        ":node_modules/jest-environment-jsdom",
    ],
)
