load("//:bazel/python.bzl", "py_binary")
load("//bazel/oci:defs.bzl", "image")

py_binary(
    name = "main",
    srcs = ["main.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "@pip_deps//diffusers",
        "@pip_deps//torch",
    ],
)

image(
    name = "genai-image",
    base = "@nvidia-cuda",
    binary = ":main",
)
