load("//:bazel/python.bzl", "py_binary", "py_executable", "py_library", "py_test")
load("@rules_oci//oci:defs.bzl", "oci_push")
load("//bazel/oci:defs.bzl", "image")

py_library(
    name = "gg",
    srcs = [
        "gg.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "//salsa/os:environ_ctx",
        "@pip_deps//gitpython",
        "@pip_deps//humanize",
        "@pip_deps//pydantic",
        "@pip_deps//pygithub",
        "@pip_deps//rich",
        "@pip_deps//unidecode",
    ],
)

py_test(
    name = "gg_test",
    srcs = ["gg_test.py"],
    deps = [
        ":gg",
        "//salsa/util:subsets",
        "@pip_deps//gitpython",
    ],
)

py_binary(
    name = "gg_cli",
    srcs = [
        "gg_cli.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        ":gg",
        "@pip_deps//click",
        "@pip_deps//gitpython",
        "@pip_deps//rich",
    ],
)

py_binary(
    name = "gg_example",
    srcs = ["gg_example.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":gg",
        "@pip_deps//gitpython",
    ],
)

image(
    name = "gg_image",
    base = "@build",
    binary = ":gg_cli",
)

oci_push(
    name = "gg_image_push",
    image = ":gg_image",
    remote_tags = ["latest"],
    repository = "index.docker.io/juanzolotoochin/ubuntu-build",
)

py_executable(
    name = "gg_executable",
    binary = ":gg_cli",
    tags = ["manual"],
)
